force-app/main/default/objects/Dummy36__c/Dummy36__c.object-meta.xml
<CustomObject>
    <label>Dummy36</label>
    <nameField>
        <label>Dummy36 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy36</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>