force-app/main/default/objects/Dummy36__c/fields/FooBar014__c.field-meta.xml
<CustomField>
    <fullName>FooBar014__c</fullName>
    <label>FooBar014</label>
    <length>255</length>
    <type>Text</type>
</CustomField>