force-app/main/default/objects/Dummy36__c/fields/FooBar019__c.field-meta.xml
<CustomField>
    <fullName>FooBar019__c</fullName>
    <label>FooBar019</label>
    <length>255</length>
    <type>Text</type>
</CustomField>