force-app/main/default/objects/Dummy36__c/fields/FooBar058__c.field-meta.xml
<CustomField>
    <fullName>FooBar058__c</fullName>
    <label>FooBar058</label>
    <length>255</length>
    <type>Text</type>
</CustomField>